Page structure test.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
         <h1 class="project-name">Kelvin van Hoorn</h1>
     </header>
     <main id="content" class="main-content" role="main">
+        <a href="https://radagasd.github.io/MyWebsite/">Home</a> | <a href="https://radagasd.github.io/MyWebsite/Showcases/">Showcases</a>
         {{ content }}
         <footer class="site-footer">
             &copy; A website by Kelvin van Hoorn
