--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,11 +1,10 @@
+---
+---
 // @import "{{ site.theme }}";
 
 .main-content {
     h1 {
         color: rgb(126, 219, 72);
     }
-}
-
-.section{
-    text-align:center;
+    text-align: center;
 }
