--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 
       <p>{{ site.description | default: site.github.project_tagline }}</p>
     </header>
-    <section>
+    <section class="main-content">
 
     {{ content }}
 
