--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}"> -->
-  </head>
+{% include head.html %}
   <body>
-    <header>
-      <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+    {% include header.html %}
 
-      <p>{{ site.description | default: site.github.project_tagline }}</p>
-    </header>
     <section class="main-content">
 
     {{ content }}
 
     </section>
-    <footer>
-      <p>A website by Kelvin van Hoorn</p>
-    </footer>
+
+    {% include footer.html %}
   </body>
 </html>
 
