--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,10 +3,10 @@
 
     <!-- Header -->
     <header id="header">
-        <a href="{{ "" | absolute_url }}/" class="logo"><strong>{{ site.title }}</strong> <span>{{ site.subtitle }}</span></a>
-        <nav>
+        <a href="{{ "" | absolute_url }}" class="logo"><strong>{{ site.title }}</strong> <span>{{ site.subtitle }}</span></a>
+        <!-- <nav>
             <a href="#menu">Menu</a>
-        </nav>
+        </nav> -->
     </header>
     
     <!-- Menu -->
