--- a/_sass/layout/_wrapper.scss
+++ b/_sass/layout/_wrapper.scss
@@ -3,7 +3,5 @@
     padding-top: 30.25em;
     background-color: _pallete(bg);
 
-    text-align: center;
-    align-items: center;
-
+    text-align: right;
 }
