--- a/_sass/layout/_wrapper.scss
+++ b/_sass/layout/_wrapper.scss
@@ -1,7 +1,7 @@
 /* Wrapper */
 #wrapper {
-    padding-top: 30.25em;
+    padding-top: 3.25em;
     background-color: _pallete(bg);
 
-    text-align: right;
+    text-align: center;
 }
