--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -1,17 +1,9 @@
 // Palette.
 $palette: (
-    bg:					#242943,
-    bg-alt:				#2a2f4a,
-    fg:					#ffffff,
-    fg-bold:			#ffffff,
-    fg-light:			rgba(244,244,255,0.2),
-    border:				rgba(212,212,255,0.1),
-    border-bg:			rgba(212,212,255,0.035),
-    highlight:			#9bf1ff,
-    accent1:			#6fc3df,
-    accent2:			#8d82c4,
-    accent3:			#ec8d81,
-    accent4:			#e7b788,
-    accent5:			#8ea9e8,
-    accent6:			#87c5a4
+    bg          : rgb(223, 223, 223),
+    bg-alt      : rgb(247, 173, 173),
+    blue        : #223ac0,
+    yellow      : #fcff49
 );
+
+$header-mobile-width: 600px;
