--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,4 +2,17 @@
 ---
 
 @import 'libs/vars';
-@import 'layout/wrapper'; 
+@import 'libs/functions';
+
+@import 'layout/wrapper';
+@import 'layout/header'; 
+
+video {
+    width: 100%;
+    height: auto;
+}
+
+body {
+    background: palette(bg);
+    margin: 0;
+}
