--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,8 @@
 	<!-- <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}"> -->
 
 	<!-- <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}"> -->
-	<link rel="stylesheet" href="/assets/css/main.css">
+	<!-- <link rel="stylesheet" type="text/css" href="../assets/css/main.scss"> -->
+	<link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}" />
 	<!--[if lte IE 9]><link rel="stylesheet" href="{{ "assets/css/ie9.css" | relative_url }}" /><![endif]-->
 	<!--[if lte IE 8]><link rel="stylesheet" href="{{ "assets/css/ie8.css" | relative_url }}" /><![endif]-->
 </head>
