--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,11 @@
   <body>
     {% include header.html %}
 
-    <section class="main-content">
+    <div class="main-content">
 
     {{ content }}
 
-    </section>
+    </div>
 
     {% include footer.html %}
   </body>
