--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -2,15 +2,11 @@
     background: palette(bg-alt);
 
     .navbar {
+        overflow: hidden;
         background-color: #333;
         position: fixed;
-        margin: 0;
-        padding: 0;
-        width: 100%;
         top: 0;
-
-        overflow: hidden;
-        
+        width: 100%;
     }
 
     .navbar a{
@@ -24,6 +20,7 @@
 
         float: left;
 
+        // font-size: 3vw;
         font-size: 18px;
         line-height: 25px;
         border-radius: 10px;
@@ -39,7 +36,13 @@
         float: right;
     }
 
-    @media screen and (max-width: $header-mobile-width){
+    .navbar .logo
+    {
+        font-weight: bold;
+        font-size: 35px;
+    }
+
+    @media screen and (max-width: $mediumdevice-width){
         .navbar{
             position: relative;
         }
@@ -51,10 +54,5 @@
         }
     }
 
-    .navbar .logo
-    {
-        font-weight: bold;
-        font-size: 35px;
-    }
-
+    
 }
