--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,13 @@
   <body>
     {% include header.html %}
 
-    <div class="main-content">
+    <div class="main-grid">
 
-    {{ content }}
+      <div class="whitespace" style="background-color: brown;"></div>
+      <div class="main-content">
+        {{ content }}
+      </div>
+      <div class="whitespace" style="background-color: brown;"></div>
 
     </div>
 
