--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,8 @@
         <div class="navbar">
             
             <a href="{{ "" | absolute_url }}" class="logo">{{ site.title }}</a>
+
+            <div></div>
             
             <div class="navbar-right">
                 {% assign navlist = site.html_pages | where_exp:"item","item.nav-menu >= 0" | sort: 'nav-menu' %}
