--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -1,7 +1,7 @@
 // Palette.
 $palette: (
     bg          : rgb(255, 255, 255),
-    bg-alt      : rgb(247, 173, 173),
+    bg-alt      : hsl(0, 0%, 90%),
     blue        : #223ac0,
     yellow      : #fcff49,
 
