--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -3,8 +3,10 @@
 
     .navbar{
         background-color: palette(header-bg);
-        position: fixed;
-        top: 0;
+        position: relative;
+        // top: 0;
+
+        padding: 0.5em;
 
         width: 100%;
         border-bottom: 2px solid palette(divider);
@@ -36,9 +38,6 @@
     }
 
     .navbar .navbar-right{
-        // display:grid;
-        // // grid-template-columns: 1fr;
-        // grid-template-rows: 1fr;
     }
 
     .navbar .logo
