--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -13,7 +13,7 @@ body {
 }
 
 .main-content{
-    margin-top: 50px;
+    // margin-top: 5em;
     padding: 1em;
     background-color: palette(bg-alt);
 }
