--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,13 +7,36 @@
 
     <div class="main-grid">
 
-      <div class="whitespace" style="background-color: brown;"></div>
+      <div class="whitespace"></div>
       <div class="main-content">
         {{ content }}
       </div>
-      <div class="whitespace" style="background-color: brown;"></div>
+      <div class="whitespace"></div>
 
     </div>
+
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+
+    <script>
+        //Get the button
+        var mybutton = document.getElementById("myBtn");
+        
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function() {scrollFunction()};
+        
+        function scrollFunction() {
+          if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+            mybutton.style.display = "block";
+          } else {
+            mybutton.style.display = "none";
+          }
+        }
+        
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+          window.scrollTo({top: 0, behavior: 'smooth'});
+        }
+      </script>
 
     {% include footer.html %}
   </body>
