--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,28 +15,7 @@
 
     </div>
 
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-
-    <script>
-        //Get the button
-        var mybutton = document.getElementById("myBtn");
-        
-        // When the user scrolls down 20px from the top of the document, show the button
-        window.onscroll = function() {scrollFunction()};
-        
-        function scrollFunction() {
-          if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-            mybutton.style.display = "block";
-          } else {
-            mybutton.style.display = "none";
-          }
-        }
-        
-        // When the user clicks on the button, scroll to the top of the document
-        function topFunction() {
-          window.scrollTo({top: 0, behavior: 'smooth'});
-        }
-      </script>
+    {% include core.html %}
 
     {% include footer.html %}
   </body>
