--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -27,6 +27,9 @@ body {
     padding: 0.5em;
     border-radius: 0.5em;
 }
+
+#toTopBtn:hover {
+}
   
 @media (hover: hover){
     #toTopBtn:hover {
