--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
 
     </div>
 
+    <button onclick="topFunction()" id="toTopBtn" title="Go to top">Top</button>
     {% include core.html %}
 
     {% include footer.html %}
