--- a/_includes/core.html
+++ b/_includes/core.html
@@ -1,5 +1,3 @@
-<button onclick="topFunction()" id="toTopBtn" title="Go to top">Top</button>
-
 <script>
     //Get the button
     var mybutton = document.getElementById("toTopBtn");
@@ -9,14 +7,17 @@
     
     function scrollFunction() {
         if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-        mybutton.style.display = "block";
+            mybutton.style.visibility = "visible";
+            mybutton.style.opacity = 1;
         } else {
-        mybutton.style.display = "none";
+            mybutton.style.visibility = "hidden";
+            mybutton.style.opacity = 0;
         }
     }
     
     // When the user clicks on the button, scroll to the top of the document
     function topFunction() {
         window.scrollTo({top: 0, behavior: 'smooth'});
+        // document.getElementById('topScroll').scrollIntoView({behavior: 'smooth'});
     }
-    </script>
+</script>
