--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -1,15 +1,11 @@
 #header{
-    background: palette(bg-alt);
+    background: palette(bg);
+    border-bottom: 2px solid palette(divider);
 
     .navbar{
-        background-color: palette(header-bg);
         position: relative;
-        // top: 0;
-
         padding: 0.5em;
-
         width: 100%;
-        border-bottom: 2px solid palette(divider);
 
         display: grid;
         grid-template-columns: auto 1fr auto;
@@ -30,7 +26,9 @@
 
         border: 0.2em solid palette(accent1);
         border-radius: 0.5em;
-    }
+
+        transition: all 0.3s ease-in-out;
+    }     
 
     .navbar a:hover{
         background-color: palette(accent1);
@@ -45,21 +43,5 @@
         font-weight: bold;
         font-size: xx-large;
         line-height: normal;
-    }
-
-    // @media screen and (max-width: $mediumdevice-width){
-    //     .navbar{
-    //         position: relative;
-    //         width: 100%;
-    //         padding: 0;
-    //     }
-    //     .navbar a{
-    //         float: none;
-    //     }
-    //     .navbar .navbar-right{
-    //         float: none;
-    //     }
-    // }
-
-    
+    }    
 }
