--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -13,7 +13,10 @@ body {
 }
 
 #toTopBtn {
-    display: none;
+    visibility: hidden;
+    opacity: 0;
+
+    display: block;
     position: fixed;
     bottom: 1em;
     right: 2em;
@@ -26,6 +29,8 @@ body {
     cursor: pointer;
     padding: 0.5em;
     border-radius: 0.5em;
+
+    transition: 0.3s, visibility 0s, opacity 0.5s;
 }
 
 #toTopBtn:hover {
