--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -24,6 +24,7 @@
         padding: 0.3em;
         margin: 0.2em;
 
+        background-color: palette(bg);
         border: 0.2em solid palette(accent1);
         border-radius: 0.5em;
 
