--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -1,14 +1,15 @@
 // Palette.
 $palette: (
-    bg          : rgb(255, 255, 255),
-    bg-alt      : hsl(0, 0%, 92%),
-    blue        : #223ac0,
-    yellow      : #fcff49,
+    bg              : hsl(0, 0%, 100%),
+    bg-alt          : hsl(0, 0%, 92%),
+    bg-contrast     : hsl(0, 0, 5%),
 
-    divider     : hsl(0, 0%, 25%),
+    divider         : hsl(0, 0%, 25%),
 
     text            : hsl(0, 0%, 10%),
     text-alt        : white,
+
+    video-box       : tomato,
 
     accent1         : mediumseagreen,
     accent2         : tomato
