--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -7,7 +7,7 @@ $palette: (
     divider         : hsl(0, 0%, 25%),
 
     text            : hsl(0, 0%, 10%),
-    text-alt        : white,
+    text-alt        : hsl(0, 0%, 100%),
 
     video-box       : tomato,
 
