--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,15 +2,14 @@
 	<title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<!--[if lte IE 8]><script src="{{ "assets/js/ie/html5shiv.js" | relative_url }}"></script><![endif]-->
-	<!-- <link rel="stylesheet" href="{{ "assets/css/main.css" | relative_url }}" /> -->
-	<!-- <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}"> -->
 
-	<!-- <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}"> -->
-	<!-- <link rel="stylesheet" type="text/css" href="../assets/css/main.scss"> -->
 	<link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}" />
-	<!--[if lte IE 9]><link rel="stylesheet" href="{{ "assets/css/ie9.css" | relative_url }}" /><![endif]-->
-	<!--[if lte IE 8]><link rel="stylesheet" href="{{ "assets/css/ie8.css" | relative_url }}" /><![endif]-->
 
+	<!-- Font Awesome -->
 	<script src="https://kit.fontawesome.com/ea9a1df156.js" crossorigin="anonymous"></script>
+
+	<!-- Google analytics -->
+	{% if site.google_analytics and jekyll.environment == 'production' %}
+	{% include analytics.html %}
+	{% endif %}
 </head>
