--- a/_includes/core.html
+++ b/_includes/core.html
@@ -1,3 +1,4 @@
+<!-- Back to top button -->
 <script>
     //Get the button
     var mybutton = document.getElementById("toTopBtn");
@@ -21,3 +22,56 @@
         // document.getElementById('topScroll').scrollIntoView({behavior: 'smooth'});
     }
 </script>
+
+<!-- Modal images -->
+<!-- The Modal -->
+<div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="img01">
+    <div id="caption"></div>
+</div>
+<!-- The script -->
+<script>
+    // Get the modal
+    var modal = document.getElementById('myModal');
+
+    // Get the image and insert it inside the modal - use its "alt" text as a caption
+    var img = document.getElementsByClassName('image__modal');
+    var modalImg = document.getElementById("img01");
+    var captionText = document.getElementById("caption");
+
+    var showModal = function(){
+        modal.style.display = "block";
+        modalImg.src = this.src;
+        captionText.innerHTML = this.alt;
+    }
+
+    for (var i = 0; i < img.length; i++) {
+        img[i].addEventListener('click', showModal);
+    }
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() { 
+        modal.style.display = "none";
+    }
+</script>
+
+<!-- Image caption --> 
+<script>
+    $.each($(".image__caption"), function() {
+    var altText = $(this).attr('alt');
+
+    var newDiv = document.createElement("div");
+    $(newDiv).html(altText);
+    $(newDiv).attr('class','caption__text round');
+    $(this).after(newDiv);
+    });
+</script>    
+
+ 
+
+
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
