--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,8 @@
 	<!-- Font Awesome -->
 	<script src="https://kit.fontawesome.com/ea9a1df156.js" crossorigin="anonymous"></script>
 
+	<script src="{{ "assets/js/jquery.min.js" | absolute_url }}"></script>
+
 	<!-- Google analytics -->
 	{% if site.google_analytics and jekyll.environment == 'production' %}
 	{% include analytics.html %}
