--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -11,8 +11,12 @@ $palette: (
 
     video-box       : tomato,
 
-    accent1         : mediumseagreen,
-    accent2         : tomato
+    accent1         : #4abf50,
+    accent2         : #ee5622,
+    accent3         : #eca72c,
+    accent4         : #2d7dd2,
+    accent5         : #914d76
+
 );
 
 $phone-width: 600px;
