--- a/_sass/libs/_core.scss
+++ b/_sass/libs/_core.scss
@@ -4,8 +4,11 @@
 	height: 0;
 
     background-color: palette(video-box);
-    border: 5px solid palette(video-box);
-    border-radius: 1em;
+    border: 0.3rem solid palette(video-box);
+    border-radius: 0.3rem;
+
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 .youtube-container iframe {
 	position: absolute;
@@ -13,7 +16,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-    border-radius: 1em;
+    border-radius: 0.3rem;
 }
 
 .title-box{
@@ -33,10 +36,73 @@
     margin-top: 1em;
 }
 
+.grid-2{
+    position: relative;
+    display: grid;
+    align-items: bottom;
+    grid-template-columns: 1fr 1rem 1fr;
+}
+
+.image-container{
+    position:relative;
+    border: 0.3rem solid palette(accent3);
+    background-color: palette(accent3);
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.image-container img{
+    object-fit: contain;
+    width: 100%;
+    max-height: 100%;
+}
+
+.caption__text{
+    position: absolute;
+    bottom: 0;
+    background: rgb(0,0,0);
+    background: rgba(0,0,0,0.5);
+    color: palette(text-alt);
+
+    text-align: center;
+    
+    width: 100%;
+    max-height: 100%;
+    padding: 0.5em;
+}
+
+.list-container{
+    position: relative;
+    border: 0.5vw solid palette(accent4);
+    background-color: palette(accent4);
+    color: palette(text-alt);
+    padding: 0.5rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.round{
+    border-radius: 0.3rem;
+}
+
+.bottom-caption{
+    position: absolute;
+    bottom: 0;
+    background: rgb(0,0,0);
+    background: rgba(0,0,0,0.5);
+    color: palette(text-alt);
+
+    text-align: center;
+    
+    width: 100%;
+    max-height: 100%;
+    padding: 0.5em;
+}
+
 a{
     font-weight: bold;
     text-decoration: none;
-    color: palette(text);
+    color:inherit;
 }
 a:hover{
     text-decoration: underline;
@@ -50,7 +116,7 @@ a:hover{
     position: fixed;
     bottom: 1em;
     right: 2em;
-    z-index: 99;
+    z-index: 1;
     font-size: medium;
     outline: none;
     border: 0.2em solid palette(accent1);
@@ -75,5 +141,92 @@ a:hover{
     #toTopBtn:hover {
     background-color: palette(accent1);
     color: palette(text-alt);
+    }
+}
+
+// Modal Image
+#myImg {
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+#myImg:hover {opacity: 0.7;}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 2; /* Sit on top */
+    padding-top: 5vh; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+
+/* Modal Content (image) */
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 1200px;
+}
+
+/* Caption of Modal Image */
+#caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 1200px;
+    text-align: center;
+    color: palette(text-alt);
+    padding: 0.5em 0;
+    // height: 150px;
+}
+
+/* Add Animation */
+.modal-content, #caption {    
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoom {
+    from {-webkit-transform:scale(0)} 
+    to {-webkit-transform:scale(1)}
+}
+
+@keyframes zoom {
+    from {transform:scale(0)} 
+    to {transform:scale(1)}
+}
+
+/* The Close Button */
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+    .modal-content {
+        width: 100%;
     }
 }
