--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -1,5 +1,5 @@
 #footer{
     text-align: center;
-    border-top: 2px solid palette(divider);
+    border-top: 0.2rem solid palette(divider);
     background-color: palette(bg);
 }
