--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,26 @@
 <!-- Footer -->
 <footer id="footer">
-    <p>This is a footer</p>
+
+    <div class="main-grid">
+        <div></div>
+        <div class="socials__container">
+            <a href="https://twitter.com/KelvinvanHoorn" target="_blank" class="socials__a">
+                <i class="fab fa-twitter-square" id="footer__socials"></i>
+            </a>
+            <a href="https://www.reddit.com/user/Radagasd" target="_blank" class="socials__a">
+                <i class="fab fa-reddit-square" id="footer__socials"></i>
+            </a>
+            <a href="https://www.github.com/Radagasd" target="_blank" class="socials__a">
+                <i class="fab fa-github-square" id="footer__socials"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/kelvin-van-hoorn" target="_blank" class="socials__a">
+                <i class="fab fa-linkedin" id="footer__socials"></i>
+            </a>
+            <a href="https://radagasd.itch.io/" target="_blank" class="socials__a">
+                <i class="fab fa-itch-io" id="footer__socials"></i>
+            </a>
+        </div>
+        <div></div>
+    </div>
+    
 </footer>
