--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,7 +32,7 @@
     </div>
     
 
-    <button onclick="topFunction()" id="toTopBtn" title="Go to top">Top</button>
+    <button onclick="topFunction()" id="toTopBtn" title="Go to top"><i class="fas fa-chevron-up"></i></button>
 
     
     
