--- a/_sass/libs/_core.scss
+++ b/_sass/libs/_core.scss
@@ -42,8 +42,45 @@
     grid-template-columns: 1fr 1rem 1fr;
 }
 
+.grid-w480px{
+    position: relative;
+    display: grid;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.container__preview{
+    position: relative;
+    text-align: left;
+    border: 0.3rem solid palette(accent1);
+    background-color: palette(accent1);
+    margin: 0.5rem;
+}
+
+@media only screen and (max-width: 960px) {
+    .grid-w480px {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .grid-w480px {
+        grid-template-columns: 1fr;
+    }
+}
+
+.container__preview-video{
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
 .image-container{
     position:relative;
+    display: flex;
     border: 0.3rem solid palette(accent3);
     background-color: palette(accent3);
     margin: 0.5rem 0;
@@ -61,10 +98,8 @@
     background: rgb(0,0,0);
     background: rgba(0,0,0,0.5);
     color: palette(text-alt);
-
-    text-align: center;
-    
     width: 100%;
+    text-align: center;
     max-height: 100%;
     padding: 0.5em;
 }
