--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -1,5 +1,5 @@
 #footer{
-    text-align: right;
+    text-align: left;
     border-top: 0.2rem solid palette(divider);
     background-color: palette(bg);
 
@@ -8,8 +8,8 @@
     }
 
     .socials__container{
-        margin-top: 1rem;
-        margin-right: 1rem;
+        // margin-top: 1rem;
+        margin: 1rem;
     }
 
     #footer__socials{
