--- a/_sass/libs/_core.scss
+++ b/_sass/libs/_core.scss
@@ -85,6 +85,18 @@
     margin: 0.5rem;
 }
 
+.post__navigation{
+    padding: 0.5rem 0;
+    background-color: palette(bg);
+    border-top: 0.2rem solid palette(accent1);
+    border-bottom: 0.2rem solid palette(accent1);
+    position: relative;
+    display: grid;
+    align-items: center;
+    width: 100%;
+    grid-template-columns: 1fr 1fr;
+}
+
 @media only screen and (max-width: 960px) {
     .grid-w480px {
         grid-template-columns: 1fr 1fr;
