--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,6 +16,9 @@
             <a href="https://www.linkedin.com/in/kelvin-van-hoorn" target="_blank" class="socials__a">
                 <i class="fab fa-linkedin" id="footer__socials"></i>
             </a>
+            <a href="/feed.xml" target="_blank" class="socials__a">
+                <i class="fas fa-rss-square" id="footer__socials"></i>
+            </a>
             <a href="https://radagasd.itch.io/" target="_blank" class="socials__a">
                 <i class="fab fa-itch-io" id="footer__socials"></i>
             </a>
