--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}" />
+	<link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/feed.xml">
 
 	<!-- Font Awesome -->
 	<script src="https://kit.fontawesome.com/ea9a1df156.js" crossorigin="anonymous"></script>
