--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,12 +4,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}" />
+
+	<!-- RSS feed -->
 	<link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/feed.xml">
 
 	<!-- Font Awesome -->
 	<script src="https://kit.fontawesome.com/ea9a1df156.js" crossorigin="anonymous"></script>
 
+	<!-- Jquery -->
 	<script src="{{ "assets/js/jquery.min.js" | absolute_url }}"></script>
+
+	<!-- Favicon -->
+	<link rel="shortcut icon" type="image/x-icon" href="/assets/favicon/favicon.ico">
 
 	<!-- Google analytics -->
 	{% if site.google_analytics and jekyll.environment == 'production' %}
