--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,9 @@
 	<!-- Favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="/assets/favicon/favicon.ico">
 
+	<!-- Code highlighting -->
+	<link rel="stylesheet" href="/assets/css/prism.css">
+
 	<!-- Google analytics -->
 	{% if site.google_analytics and jekyll.environment == 'production' %}
 	{% include analytics.html %}
