--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -3,6 +3,7 @@ $palette: (
     bg              : hsl(0, 0%, 100%),
     bg-alt          : hsl(0, 0%, 92%),
     bg-contrast     : hsl(0, 0, 20%),
+    bg-lightcontrast: hsl(0, 0, 50%),
 
     divider         : hsl(0, 0%, 10%),
 
