--- a/_includes/core.html
+++ b/_includes/core.html
@@ -1,4 +1,29 @@
 {% include liquidScripts.html %}
+<!-- Code highlighting -->
+<script src="/assets/js/prism.js"></script>
+
+<!-- Collapsible -->
+<script>
+    var coll = document.getElementsByClassName("collapsible");
+    var i;
+    
+    for (i = 0; i < coll.length; i++) {
+        coll[i].addEventListener("click", function() {
+            this.classList.toggle("collapsible--active");
+            var content = this.nextElementSibling;
+            if (content.style.maxHeight){
+                content.style.maxHeight = null;
+                content.style.borderWidth = "0em";
+                content.style.visibility = "hidden";
+            } else {
+                content.style.maxHeight = content.scrollHeight + "px";
+                content.style.borderWidth = "0.3rem";
+                content.style.visibility = "visible";
+            } 
+        });
+    }
+</script>
+
 <!-- Back to top button -->
 <script>
     //Get the button
@@ -23,6 +48,8 @@
         // document.getElementById('topScroll').scrollIntoView({behavior: 'smooth'});
     }
 </script>
+
+
 
 <!-- Modal images -->
 <!-- The Modal -->
