--- a/_sass/libs/_core.scss
+++ b/_sass/libs/_core.scss
@@ -1,3 +1,15 @@
+@import 'libs/images';
+@import 'libs/collapsible';
+
+html {
+    scroll-behavior: smooth;
+}
+
+pre {
+    overflow: auto;
+    width: 100%;
+}
+
 .youtube-container {
 	position: relative;
 	padding-bottom: 56.25%; /* 16:9 */
@@ -16,6 +28,10 @@
 	width: 100%;
 	height: 100%;
     border-radius: 0.3rem;
+}
+
+.note__small{
+    font-style: italic;
 }
 
 .title-box{
@@ -117,31 +133,7 @@
     height: 100%;
 }
 
-.image-container{
-    position:relative;
-    display: flex;
-    border: 0.3rem solid palette(accent3);
-    background-color: palette(accent3);
-    margin: 0.5rem 0;
-}
 
-.image-container img{
-    object-fit: contain;
-    width: 100%;
-    max-height: 100%;
-}
-
-.caption__text{
-    position: absolute;
-    bottom: 0;
-    background: rgb(0,0,0);
-    background: rgba(0,0,0,0.5);
-    color: palette(text-alt);
-    width: 100%;
-    text-align: center;
-    max-height: 100%;
-    padding: 0.5em;
-}
 
 .list-container{
     position: relative;
@@ -205,86 +197,4 @@ a:hover{
     background-color: palette(bg-contrast);
     color: palette(text-alt);
     padding: 0 0.5rem;
-}
-
-// Modal Image
-.image__modal{
-    cursor: pointer;
-}
-
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 2; /* Sit on top */
-    padding-top: 5vh; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
-}
-
-/* Modal Content (image) */
-.modal-content {
-    margin: auto;
-    display: block;
-    width: 80%;
-    // max-width: 1200px;
-}
-
-/* Caption of Modal Image */
-#caption {
-    margin: auto;
-    display: block;
-    width: 80%;
-    // max-width: 1200px;
-    text-align: center;
-    color: palette(text-alt);
-    padding: 0.5em 0;
-}
-
-/* Add Animation */
-.modal-content, #caption {    
-    -webkit-animation-name: zoom;
-    -webkit-animation-duration: 0.6s;
-    animation-name: zoom;
-    animation-duration: 0.6s;
-}
-
-@-webkit-keyframes zoom {
-    from {-webkit-transform:scale(0)} 
-    to {-webkit-transform:scale(1)}
-}
-
-@keyframes zoom {
-    from {transform:scale(0)} 
-    to {transform:scale(1)}
-}
-
-/* The Close Button */
-.close {
-    position: absolute;
-    top: 15px;
-    right: 35px;
-    color: #f1f1f1;
-    font-size: 40px;
-    font-weight: bold;
-    transition: 0.3s;
-}
-
-.close:hover,
-.close:focus {
-    color: #bbb;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-/* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: $mediumdevice-width){
-    .modal-content {
-        width: 100%;
-    }
 }
