--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -5,6 +5,8 @@ $palette: (
     bg-contrast     : hsl(0, 0, 20%),
     bg-lightcontrast: hsl(0, 0, 50%),
 
+    bg-mark    : hsl(0, 0%, 100%),
+
     divider         : hsl(0, 0%, 10%),
 
     text            : hsl(0, 0%, 10%),
