--- a/_sass/libs/_core.scss
+++ b/_sass/libs/_core.scss
@@ -10,6 +10,19 @@ pre {
     width: 100%;
 }
 
+mark{
+    background-color: palette(bg-mark);
+    border-radius: 0.3em;
+    padding: 0 0.15em;
+    color: palette(text);
+}
+
+// figure.highlight{
+//     background-color: #404040;
+//     margin: 0;
+//     overflow: auto;
+// }
+
 .youtube-container {
 	position: relative;
 	padding-bottom: 56.25%; /* 16:9 */
@@ -28,10 +41,6 @@ pre {
 	width: 100%;
 	height: 100%;
     border-radius: 0.3rem;
-}
-
-.note__small{
-    font-style: italic;
 }
 
 .title-box{
