--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,9 +1,13 @@
 ---
 ---
 
+
+
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/core';
+
+@import 'external/reveal';
 
 @import 'layout/wrapper';
 @import 'layout/main';
