--- a/_includes/core.html
+++ b/_includes/core.html
@@ -1,6 +1,7 @@
 {% include liquidScripts.html %}
 <!-- Code highlighting -->
 <script src="/assets/js/prism.js"></script>
+<script src="/assets/js/reveal.js"></script>
 
 <!-- Collapsible -->
 <script>
@@ -48,8 +49,6 @@
         // document.getElementById('topScroll').scrollIntoView({behavior: 'smooth'});
     }
 </script>
-
-
 
 <!-- Modal images -->
 <!-- The Modal -->
