--- a/_sass/libs/_core.scss
+++ b/_sass/libs/_core.scss
@@ -17,12 +17,6 @@ mark{
     color: palette(text);
 }
 
-// figure.highlight{
-//     background-color: #404040;
-//     margin: 0;
-//     overflow: auto;
-// }
-
 .container__code{
     display:grid;
     width:100%;
@@ -73,6 +67,14 @@ mark{
     width: 100%;
     gap: 1rem;
     grid-template-columns: repeat(2, 1fr);// 1fr;
+}
+
+.grid__alwayscolumns--2{
+    position: relative;
+    display: grid;
+    width: 100%;
+    gap: 1rem;
+    grid-template-columns: repeat(2, 1fr);
 }
 
 @media only screen and (max-width: $mediumdevice-width) {
@@ -213,4 +215,5 @@ a:hover{
     background-color: palette(bg-contrast);
     color: palette(text-alt);
     padding: 0 0.5rem;
+    margin: 0.5rem 0;
 }
