--- a/_sass/libs/_core.scss
+++ b/_sass/libs/_core.scss
@@ -61,6 +61,34 @@ mark{
     margin-top: 1em;
 }
 
+ul.n{
+    list-style-type: decimal;
+}
+
+
+ol {
+    list-style-type: none;
+    counter-reset: item;
+    margin: 0;
+    padding: 0;
+}
+ol > li {
+    display: table;
+    counter-increment: item;
+    margin-bottom: 0.6em;
+}
+ol > li:before {
+    content: counters(item, ".") ". ";
+    display: table-cell;
+    padding-right: 0.6em;    
+}
+li ol > li {
+    margin: 0;
+}
+li ol > li:before {
+    content: counters(item, ".") " ";
+}
+
 .grid__maxcolumns--2{
     position: relative;
     display: grid;
