--- a/_sass/libs/_core.scss
+++ b/_sass/libs/_core.scss
@@ -44,6 +44,15 @@ mark{
     border-radius: 0.3rem;
 }
 
+.youtube-container video {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+    border-radius: 0.3rem;
+}
+
 .title-box{
     display: grid;
     align-items: center;
