--- a/_sass/libs/_images.scss
+++ b/_sass/libs/_images.scss
@@ -24,6 +24,16 @@
     padding: 0.5em;
 }
 
+.caption__text--fill{
+    display: grid;
+    align-items: center;
+    height: 100%;
+}
+
+.caption__p--fill{
+    height:100%;
+}
+
 // Modal Image
 .image__modal{
     cursor: pointer;
