--- a/_sass/libs/_grids.scss
+++ b/_sass/libs/_grids.scss
@@ -6,11 +6,7 @@
     grid-template-columns: repeat(2, 1fr);// 1fr;
 }
 
-@media only screen and (max-width: $mediumdevice-width) {
-    .grid__maxcolumns--2{
-        grid-template-columns: 1fr;
-    }
-}
+
 
 .grid__columns--exactly2{
     position: relative;
@@ -36,12 +32,29 @@
     grid-template-columns: 2fr 1fr;
 }
 
+.grid__columns-2-1{
+    position: relative;
+    display: grid;
+    width: 100%;
+    gap: 1rem;
+    grid-template-columns: 2fr 1fr;
+}
+
 .grid__columns-1-2--exact{
     position: relative;
     display: grid;
     width: 100%;
     gap: 1rem;
     grid-template-columns: 1fr 2fr;
+}
+
+@media only screen and (max-width: $mediumdevice-width) {
+    .grid__maxcolumns--2{
+        grid-template-columns: 1fr;
+    }
+    .grid__columns-2-1{
+        grid-template-columns: 1fr;
+    }
 }
 
 .grid-w480px{
