--- a/_sass/libs/_images.scss
+++ b/_sass/libs/_images.scss
@@ -6,14 +6,32 @@
     margin: 0.5rem 0;
 }
 
-.image-container img{
+// .image-container img{
+//     object-fit: contain;
+//     width: 100%;
+//     max-height: 100%;
+// }
+
+.fitH{
+    height: fit-content;
+}
+
+.fitW{
+    width: fit-content;
+}
+
+.portrait{
     object-fit: contain;
     width: 100%;
     max-height: 100%;
 }
 
-.fitH{
-    height: fit-content;
+@media only screen and (max-width: $mediumdevice-width){
+    .portrait{
+        // $mediumdevice-width / 3
+        max-width: 256px;
+        max-height: 100vw;
+    }
 }
 
 .caption__text{
