--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -15,6 +15,7 @@
     #footer__socials{
         color: palette(text);
         font-size: xx-large;
+        transition: ease-in-out 0.3s;
         // margin: 1em 0;
     }
 
