--- a/_includes/preview-list.html
+++ b/_includes/preview-list.html
@@ -68,7 +68,7 @@
             video.autoplay = true;
             video.muted = true;
             video.loop = true;
-            video.classList.add('round');
+            // video.classList.add('round');
 
             videoContainer.appendChild(video);
             videoLink.appendChild(videoContainer);
