--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -8,8 +8,25 @@
     }
 
     .socials__container{
-        // margin-top: 1rem;
-        margin: 1rem;
+        margin: 0 1rem;
+    }
+
+    .social__container{
+        display: flex;
+        width: fit-content;
+        color: palette(text-alt);
+    
+        border-radius: 0.3rem;
+        border: 0.3rem solid palette(text);
+        background-color: palette(text);
+        transition: ease-in-out 0.3s;
+    
+        margin: 0.5rem;
+    }
+    
+    .social__container:hover{
+        border-color: palette(accent1);
+        background-color: palette(accent1);
     }
 
     #footer__socials{
