--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,9 @@
     <div class="main-grid">
         <div></div>
         <div class="socials__container">
+            <!-- <a href="mailto:kelvinvanhoorn@outlook.com" class="socials__a">
+                <i class="fas fa-envelope-square" id="footer__socials"></i>
+            </a>
             <a href="https://twitter.com/KelvinvanHoorn" target="_blank" class="socials__a">
                 <i class="fab fa-twitter-square" id="footer__socials"></i>
             </a>
@@ -16,12 +19,48 @@
             <a href="https://www.linkedin.com/in/kelvin-van-hoorn" target="_blank" class="socials__a">
                 <i class="fab fa-linkedin" id="footer__socials"></i>
             </a>
-            <a href="/feed.xml" target="_blank" class="socials__a">
-                <i class="fas fa-rss-square" id="footer__socials"></i>
-            </a>
             <a href="https://radagasd.itch.io/" target="_blank" class="socials__a">
                 <i class="fab fa-itch-io" id="footer__socials"></i>
             </a>
+            <a href="/feed.xml" target="_blank" class="socials__a">
+                <i class="fas fa-rss-square" id="footer__socials"></i>
+            </a> -->
+
+            <div class="social__container--extending">
+                <a href="mailto:kelvinvanhoorn@outlook.com">
+                    <i class="fas fa-envelope" style="vertical-align:text-bottom;"></i><span>&nbspkelvinvanhoorn@outlook.com</span>
+                </a>
+            </div>
+            <div class="social__container--extending">
+                <a href="https://twitter.com/KelvinvanHoorn" target="_blank">
+                    <i class="fab fa-twitter" style="vertical-align:text-bottom;"></i><span>&nbsp@KelvinvanHoorn</span>
+                </a>
+            </div>
+            <div class="social__container--extending">
+                <a href="https://www.reddit.com/user/Radagasd" target="_blank">
+                    <i class="fab fa-reddit-alien" style="vertical-align:text-bottom;"></i><span>&nbspu/Radagasd</span>
+                </a>
+            </div>
+            <div class="social__container--extending">
+                <a href="https://www.github.com/Radagasd" target="_blank">
+                    <i class="fab fa-github" style="vertical-align:text-bottom;"></i><span>&nbspRadagasd</span>
+                </a>
+            </div>
+            <div class="social__container--extending">
+                <a href="https://www.linkedin.com/in/kelvin-van-hoorn" target="_blank">
+                    <i class="fab fa-linkedin-in" style="vertical-align:text-bottom;"></i><span>&nbspKelvin van Hoorn</span>
+                </a>
+            </div>
+            <div class="social__container--extending">
+                <a href="https://radagasd.itch.io/" target="_blank">
+                    <i class="fab fa-itch-io" style="vertical-align:text-bottom;"></i><span>&nbspRadagasd</span>
+                </a>
+            </div>
+            <div class="social__container--extending">
+                <a href="/feed.xml" target="_blank">
+                    <i class="fas fa-rss" style="vertical-align:text-bottom;"></i><span>&nbspRSS feed</span>
+                </a>
+            </div>
         </div>
         <div></div>
     </div>
